# uvflask

./: Dockerfile  README.org  flake.nix  pyproject.toml
src/: uvflask.py
