[project]
name = "uvflask"
version = "0.1.0"
description = "Add your description here"
readme = "README.org"
authors = [
    { name = "Maxwell Morris", email = "maxwell.morris@curtin.edu.au" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "hypothesis>=6.139.1",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
]

[project.scripts]
uvflask = "uvflask:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvflask.py"]
